overflow handled, close nav button fixed, hiding about section on mobile handled

--- a/styles/sass/_footer.scss
+++ b/styles/sass/_footer.scss
@@ -39,15 +39,18 @@ footer .backToTop {
 	height: 20px;
 	line-height: 20px;
 	position: absolute;
-	top: 50%; margin-top: -10px;
-	left: 50%; margin-left: -27px;
+	top: 50%; 
+	margin-top: -10px;
+	right: 45%; 
+	margin-left: -27px;
 	}
 	
 footer .backToTop:after {
 	content:"";
 	position: absolute;
 	bottom: 0;
-	left: 44%; margin-left: -0%;
+	left: 44%; 
+	margin-left: -0%;
 	width: 0%;
 	height: 1px;
 	background: #0d0d0d;
@@ -69,4 +72,10 @@ footer .backToTop:hover:after {
 	bottom: -90px;
 	z-index: 100002;
 	left: -20px
+}
+
+@media (max-width: 600px){
+	.stickyFooter .backToTop{
+		right: -45px;
+	}
 }
